# rust_AIS

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: boat_state.rs  broadcaster.rs  client.rs  lib.rs  main.rs  server.rs  single_thread_tcp_server.rs  utils.rs
src/boat_state/: boat_state_mockup.rs  boat_state_udp.rs  mod.rs
src/broadcaster/: broadcaster_mockup.rs  udp_broadcaster.rs
src/client/: broken_client.rs  mod.rs  sender.rs  tcp_client.rs  tcp_udp_client.rs
src/client/sender/: broken_sender.rs  tcp_raw_nmea_sender.rs  tcp_sender.rs  tcp_strong_sender.rs  udp_raw_nmea_sender.rs  udp_sender.rs  udp_weak_sender.rs
src/client/tcp_client/: mod.rs
src/server/: receiver.rs  tcp_server.rs  tcp_udp_server.rs
src/server/receiver/: tcp_receiver.rs  udp_receiver.rs
src/server/tcp_server/: mod.rs
