[package]
name = "rust_AIS"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1" 
tokio = { version = "1", features = ["full"] }
tokio-utils = "0.1.2"
rand = "0.8"
futures = "0.3.31"
nmea = "0.7"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = "0.7.13"
chrono = "0.4.39"
tokio-stream = "0.1.17"
